--- a/code/regression_analysis.Rmd
+++ b/code/regression_analysis.Rmd
@@ -20,15 +20,15 @@ require(tictoc) # timer: tic(); ...; toc()
 ```
 
 
-## setup whether to use log-transformation for two independent variables: num_terms, monthly_tweets
-- finally, we chose the original or raw scale of "num_terms" and "monthly_tweets" based on AIC (the one with the smallest AIC)
+## setup whether to use log-transformation for two independent variables: num_terms, daily_tweets
+- finally, we chose the original or raw scale of "num_terms" and "daily_tweets" based on AIC (the one with the smallest AIC)
 
 ```{r}
 use_log_form_of_num_terms = F
 #use_log_form_of_num_terms = T
 
-use_log_form_of_monthly_tweets = F
-#use_log_form_of_monthly_tweets = T
+use_log_form_of_daily_tweets = F
+#use_log_form_of_daily_tweets = T
 ```
 
 ## Util functions:
@@ -38,14 +38,14 @@ ifelse(!dir.exists(folder_of_results), dir.create(folder_of_results, recursive=T
 
 create_filename_for_output = function(namebase, ext='.pdf') {
   terms_str = paste0('__with_terms', ifelse(use_log_form_of_num_terms, 'LOG', 'RAW'))
-  tweets_str = paste0('__tweets', ifelse(use_log_form_of_monthly_tweets, 'LOG', 'RAW'))
+  tweets_str = paste0('__tweets', ifelse(use_log_form_of_daily_tweets, 'LOG', 'RAW'))
   filename = paste(c(namebase, terms_str, tweets_str, '.', ext), collapse = '')
   return (paste0(folder_of_results, filename))
 }
 
 save_fig = function(figname, w = 5, h = 3) {
   ggsave(figname, plot=last_plot(), width=w, height=h)
-  embedFonts(figname)
+  embedFonts(figname, outfile = figname)
   print(paste0('- file saved to: ', figname))
 }
 
@@ -53,9 +53,9 @@ run_regression_model = function(data, print_summary=T, show_tictoc=T, fixed_fact
   if (is.null(fixed_factors)) {
     fixed_parts1 = "gender + party + chamber + age"
     fixed_part_num_terms = ifelse(use_log_form_of_num_terms, "num_terms_log", "num_terms")
-    fixed_part_monthly_tweets = ifelse(use_log_form_of_monthly_tweets, "monthly_tweets_log", "monthly_tweets")
+    fixed_part_daily_tweets = ifelse(use_log_form_of_daily_tweets, "daily_tweets_log", "daily_tweets")
     
-    fixed_parts2 = paste(c(fixed_part_num_terms, fixed_part_monthly_tweets, "followers_log"), collapse = '+')
+    fixed_parts2 = paste(c(fixed_part_num_terms, fixed_part_daily_tweets, "followers_log"), collapse = '+')
     fixed_parts = paste(c(fixed_parts1, fixed_parts2), collapse = '+')
   } else {
     fixed_parts = fixed_factors
@@ -109,10 +109,12 @@ print(nrow(df))
 setDT(df)
 
 df[, ym:=substr(date, 1, 7)] # get yyyy-mm from date yyyy-mm-dd
-df[, monthly_tweets:=.N, by = list(bio_id, ym)]
 
-df$monthly_tweets_log = log1p(df$monthly_tweets)
+df[, daily_tweets:=.N, by = list(bio_id, date)]
+
 df$num_terms_log = log1p(df$num_terms)
+df$daily_tweets_log = log1p(df$daily_tweets)
+
 df$date = as.Date(df$date)
 
 # set "M" as reference for gender. Default is 'F'
@@ -203,11 +205,27 @@ sink()
 
 For categorical predictors (chamber, party), ggemmeans() averages over the proportions of the categories of factors.
 
-For continuous predictors (age, num_terms_log, followers_log, monthly_tweets_log), they are held constant at their mean value (e.g., age=60).
+For continuous predictors (age, num_terms_log, followers_log, daily_tweets_log), they are held constant at their mean value (e.g., age=60).
 
 
 ```{r}
-plot_model(model_overall, show.values = TRUE, value.offset = .4)
+use_age_by_10 = T
+if (use_age_by_10) {
+  df$age_by_10 = df$age / 10
+  
+  formula = 'self_promotion_as_predicted_by_BERT_model ~ gender + party + chamber + age_by_10 + num_terms + daily_tweets + followers_log + (1 | bio_id) + (1 | date)'
+  m2 = glmer(formula, data=df, family = binomial, control = glmerControl(optimizer = "bobyqa"), nAGQ=0)
+  age_str = '_age10'
+} else {
+  m2 = model_overall
+  age_str = ''
+}
+
+plot_model(m2, show.values = TRUE, value.offset = .4)
+#fpath_output = paste(c(folder_of_results, 'model_odds_ratios', age_str, '.pdf'), collapse = '')
+#save_fig(fpath_output, w=3.5, h=3.5) # font "ZapfDingbats" can't be embedded with embedFonts()
+fpath_output = paste(c(folder_of_results, 'model_odds_ratios', age_str, '.png'), collapse = '')
+ggsave(fpath_output, plot=last_plot(), width=3.5, height=3.5)
 ```
 
 ```{r}
@@ -266,26 +284,26 @@ save_fig(fpath_output, w=5, h=2.9)
 ## For Appendix 2 (distribution of 4 numerical values): 
 - age
 - num_terms  / num_terms_log
-- monthly_tweets / monthly_tweets_log
+- daily_tweets / daily_tweets_log
 - followers_log
 ```{r}
 
 dfu_ = copy(unique(df, by=c('bio_id', 'ym')))
-dfu_[, avg_monthly_tweets:=median(monthly_tweets), by='bio_id']
+dfu_[, avg_daily_tweets:=median(daily_tweets), by='bio_id']
 dfu_[, avg_num_terms:=median(num_terms), by='bio_id']
 dfu_[, avg_age:=median(age), by='bio_id']
 
 dfu = unique(dfu_, by=c('bio_id'))
-#dfu$avg_monthly_tweets_log = log1p(dfu$avg_monthly_tweets)
-#dfu$avg_monthly_tweets_sqrt = sqrt(dfu$avg_monthly_tweets)
+#dfu$avg_daily_tweets_log = log1p(dfu$avg_daily_tweets)
+#dfu$avg_daily_tweets_sqrt = sqrt(dfu$avg_daily_tweets)
 
 
 cbPalette <- c("#56B4E9", "#E69F00", "#F55E00",  "#0072B2",  "#CC79A7", "#BBBBBB", '#666666')
 
-#mylist <- list('age'=5, 'followers_log'=.5, 'num_terms'=1,  'num_terms_log'=.5, 'avg_monthly_tweets'=20, 'avg_monthly_tweets_log'=.15, 'avg_monthly_tweets_sqrt'=.5)
+#mylist <- list('age'=5, 'followers_log'=.5, 'num_terms'=1,  'num_terms_log'=.5, 'avg_daily_tweets'=20, 'avg_daily_tweets_log'=.15, 'avg_daily_tweets_sqrt'=.5)
 
-mylist <- list('avg_age'=5, 'followers_log'=.5, 'avg_num_terms'=1, 'avg_monthly_tweets'=20)
-#mylist <- list('avg_monthly_tweets'=20)
+mylist <- list('avg_age'=5, 'followers_log'=.5, 'avg_num_terms'=1, 'avg_daily_tweets'=1)
+#mylist <- list('avg_daily_tweets'=1)
 
 for (i in seq_along(mylist)) {
   var = names(mylist)[i]
@@ -308,10 +326,7 @@ for (i in seq_along(mylist)) {
 ```{r}
 data = df[ym=='2020-06',]
 
-data$daily_tweets = data$monthly_tweets/30
-data$age10 = data$age/10
-
-factors = "gender + party + chamber + age10 + num_terms + daily_tweets + followers_log"
+factors = "gender + party + chamber + age + num_terms + daily_tweets + followers_log"
 
 m = run_regression_model(data, fixed_factors = factors)
 ```
@@ -328,7 +343,7 @@ car::vif(m)
 ## check the linearity assumption for numerical variables
 ```{r}
 probabilities <- predict(m, type = "response")
-data_numeric = data[, .(age, num_terms, monthly_tweets, followers_log)]
+data_numeric = data[, .(age, num_terms, daily_tweets, followers_log)]
 data_numeric[, logit := log(probabilities/(1-probabilities))]
 
 data_sample = data_numeric[sample(.N, 5000)]
